tests/array/reading_partially_init_array_errors.err.expected
error: at 10:13: [INIT-UseBeforeInit] In function 'f', block 'entry': variable 'a' is used before initialization
    |
 10 |             x = copy a[1i64];
    |             ^^^^^^^^^^^^^^^^
